fixed an issue within CSS that the background was not covered and centered correctly. background-image was used instead of background:

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 #section-background {
-    background-image: url("../images/giant-wave.jpg");
+    background: url("../images/giant-wave.jpg") no-repeat center/cover;
     color: whitesmoke;
     padding-bottom: 7%;
 }
